<resources>
    <string name="app_name">My BLE Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main_scan">MainScanActivity</string>

    <string name="select_device">Select a device</string>
    <string name="scanning">Scanning for devices...</string>
    <string name="unpair">unpair</string>
    <string name="pair">pair</string>
    <string name="paired">paired</string>
    <string name="title_activity_device_control">DeviceControlActivity</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="no_data">No Data</string>

    <string name="unknown_service">Unknown Service</string>
    <string name="unknown_characteristic">Unknown Characteristic</string>

    <string name="label_device_address">Device Address : </string>
    <string name="label_state">State : </string>
    <string name="label_data">Data : </string>
    <string name="label_session_id">Session Id : </string>
    <string name="label_active_duration">Active Duration : </string>

    <string name="label_zero">0</string>
    <string name="title_location_permission">Location Permission</string>
    <string name="text_location_permission">We need location permission to access bluetooth</string>
    <string name="ok">Ok</string>

</resources>